--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
+# ----------------
+# PLEASE READ
+# ----------------
+# This file is an example of the .env file that is needed in order for certain
+# features of this application to function properly. Use this file as a template
+# to create your own .env file. The application will not read the .env.example file.
+# The following values must be populated for the local token server to dispense tokens.
+# See README.md for instructions on how to find these credentials in the Twilio Console.
+# npm install -g firebase-tools
+# firebase login
+# firebase init
+# firebase deploy
+
+REACT_APP_FRONTEND_BASE_URL = http://localhost:3000/
+REACT_APP_GA_MEASUREMENT_ID = UA-136129595-2
+PORT=3000
 REACT_APP_ENDPOINT = https://jsonplaceholder.typicode.com
