--- a/package.json
+++ b/package.json
@@ -26,56 +26,64 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },    
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/styles": "^4.10.0",
     "@material-ui/pickers": "^3.2.10",
+    "@material-ui/styles": "^4.10.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "clsx": "^1.1.1",
-    "formik": "^2.1.5",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
-    "prop-types": "^15.7.2",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "formik": "^2.1.5",
     "history": "^5.0.0",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
+    "i18next-xhr-backend": "^3.2.2",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "notistack": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
     "react-alert-template-mui": "^1.0.7",
+    "react-country-flag": "^2.3.0",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-helmet": "^6.1.0",
-    "react-perfect-scrollbar": "^1.5.8",
     "react-scripts": "4.0.0",
+    "react-tiny-fab": "^4.0.2",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^0.2.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0",
-    "yup": "^0.29.3"    
+    "web-vitals": "^0.2.4",
+    "yup": "^0.29.3"
   },
   "proxy": "http://localhost:8081/",
   "devDependencies": {
-    "node-env-run": "^4.0.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-mdx": "^1.7.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-mdx": "^1.7.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "nodemon": "^1.19.4",
-    "mdx-loader": "^3.0.2",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "mdx-loader": "^3.0.2",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^1.19.4",
     "prettier": "^1.19.1"
   }
-}  
-
+}
